# agent-comm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml
benches/: normalize.rs
docs/: CODEC_BUILDER_GUIDE.md  SPEC.md  SPEC.zh-CN.md  VALUES.md  codec_template.rs
examples/: anchor_samples.json  anchor_witness.rs
examples/anchor_witness/: RESULTS.md
measurements/codex-ccswitch-4providers-6tiers/: LICENSE.md  README.md
measurements/codex-ccswitch-4providers-6tiers/reports/: behavioural_findings.md  billing_findings.md
measurements/codex-ccswitch-4providers-6tiers/tools/: gate_bridge_resp.rs  gate_scan.rs  placement_canon.rs  translate_diff.rs
src/: check.rs  conformance.rs  lib.rs  metrics.rs  protocol.rs
src/codecs/: anthropic.rs  bottom.rs  gemini.rs  mod.rs  openai.rs  responses.rs
tests/: check_basic.rs  conformance.rs  conformance_suite.rs  metrics_basic.rs
