[package]
name = "agent-comm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Neutral conversation IR (a colimit over a small kernel) with a normal form and lossy-accounted provider codecs; fail-closed encode/decode."
repository = "https://github.com/REPLACE-ME/agent-comm"
keywords = ["agent", "llm", "codec", "colimit"]
categories = ["api-bindings"]
# zenodo DOI: TBA

[features]
# `cargo test --features conformance` runs the conformance suite against the reference codecs
# (Step2 S2-1). The suite types/runner are always in the library API; this feature only gates
# the turnkey reference-impl test entry (tests/conformance_suite.rs).
conformance = []

[dependencies]
agent-protocol = { version = "0.1", path = "../agent-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# request_fingerprint canonical hash (SPEC v1.7 §4 / G8).
blake3 = "1"

[dev-dependencies]
# anchor_witness example only; not part of the published library API.
async-trait = "0.1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
